--- a/index.html
+++ b/index.html
@@ -113,4 +113,14 @@
         </div>
     </div>
 </body>
+<footer class="footer">
+    <footer class="footer">
+        <div class="social-links">
+            <a href="https://www.instagram.com/the_yarntherapy/#" target="_blank" rel="noopener" class="social-icon">
+                <img src="img/instagram.png" alt="Instagram" width="30" height="30">
+            </a>
+        </div>
+        <p>&copy; 2024 The_Yarn_Therapy. All rights reserved.</p>
+    </footer>
+  </footer>
 </html>
